Package_Tools/include-C/hdf5/serial/c/in_arbeit/h/H5Apublic.h


typedef struct {
    hbool_t           corder_valid; 
    H5O_msg_crt_idx_t corder;       
    H5T_cset_t        cset;         
    hsize_t           data_size;    
} H5A_info_t;
typedef herr_t (*H5A_operator2_t)(hid_t location_id , const char *attr_name ,
                                  const H5A_info_t *ainfo , void *op_data );
extern herr_t H5Aclose(hid_t attr_id);
extern hid_t H5Acreate2(hid_t loc_id, const char *attr_name, hid_t type_id, hid_t space_id, hid_t acpl_id,
                        hid_t aapl_id);
extern hid_t H5Acreate_by_name(hid_t loc_id, const char *obj_name, const char *attr_name, hid_t type_id,
                               hid_t space_id, hid_t acpl_id, hid_t aapl_id, hid_t lapl_id);
extern herr_t H5Adelete(hid_t loc_id, const char *attr_name);
extern herr_t H5Adelete_by_idx(hid_t loc_id, const char *obj_name, H5_index_t idx_type, H5_iter_order_t order,
                               hsize_t n, hid_t lapl_id);
extern herr_t H5Adelete_by_name(hid_t loc_id, const char *obj_name, const char *attr_name, hid_t lapl_id);
extern htri_t H5Aexists(hid_t obj_id, const char *attr_name);
extern htri_t H5Aexists_by_name(hid_t obj_id, const char *obj_name, const char *attr_name, hid_t lapl_id);
extern hid_t H5Aget_create_plist(hid_t attr_id);
extern herr_t H5Aget_info(hid_t attr_id, H5A_info_t *ainfo );
extern herr_t H5Aget_info_by_idx(hid_t loc_id, const char *obj_name, H5_index_t idx_type,
                                 H5_iter_order_t order, hsize_t n, H5A_info_t *ainfo , hid_t lapl_id);
extern herr_t H5Aget_info_by_name(hid_t loc_id, const char *obj_name, const char *attr_name,
                                  H5A_info_t *ainfo , hid_t lapl_id);
extern ssize_t H5Aget_name(hid_t attr_id, size_t buf_size, char *buf);
extern ssize_t H5Aget_name_by_idx(hid_t loc_id, const char *obj_name, H5_index_t idx_type,
                                  H5_iter_order_t order, hsize_t n, char *name , size_t size,
                                  hid_t lapl_id);
extern hid_t H5Aget_space(hid_t attr_id);
extern hsize_t H5Aget_storage_size(hid_t attr_id);
extern hid_t H5Aget_type(hid_t attr_id);
extern herr_t H5Aiterate2(hid_t loc_id, H5_index_t idx_type, H5_iter_order_t order, hsize_t *idx,
                          H5A_operator2_t op, void *op_data);
extern herr_t H5Aiterate_by_name(hid_t loc_id, const char *obj_name, H5_index_t idx_type,
                                 H5_iter_order_t order, hsize_t *idx, H5A_operator2_t op, void *op_data,
                                 hid_t lapl_id);
extern hid_t H5Aopen(hid_t obj_id, const char *attr_name, hid_t aapl_id);
extern hid_t H5Aopen_by_idx(hid_t loc_id, const char *obj_name, H5_index_t idx_type, H5_iter_order_t order,
                            hsize_t n, hid_t aapl_id, hid_t lapl_id);
extern hid_t H5Aopen_by_name(hid_t loc_id, const char *obj_name, const char *attr_name, hid_t aapl_id,
                             hid_t lapl_id);
extern herr_t H5Aread(hid_t attr_id, hid_t type_id, void *buf);
extern herr_t H5Arename(hid_t loc_id, const char *old_name, const char *new_name);
extern herr_t H5Awrite(hid_t attr_id, hid_t type_id, const void *buf);
extern herr_t H5Arename_by_name(hid_t loc_id, const char *obj_name, const char *old_attr_name,
                                const char *new_attr_name, hid_t lapl_id);
typedef herr_t (*H5A_operator1_t)(hid_t location_id , const char *attr_name ,
                                  void *operator_data );
extern hid_t H5Acreate1(hid_t loc_id, const char *name, hid_t type_id, hid_t space_id, hid_t acpl_id);
extern int H5Aget_num_attrs(hid_t loc_id);
extern herr_t H5Aiterate1(hid_t loc_id, unsigned *idx, H5A_operator1_t op, void *op_data);
extern hid_t H5Aopen_idx(hid_t loc_id, unsigned idx);
extern hid_t H5Aopen_name(hid_t loc_id, const char *name);